[package]
name = "application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = "*"
derive_deref = "1.1.1"

[dependencies.utilities]
path = "../utilities"

[dependencies.renderer]
path = "../renderer"

[dependencies.windowing]
path = "../windowing"


