[package]
edition = "2021"
name = "windowing"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
bevy_ecs = "*"
derive_deref = "1.1.1"
raw-window-handle = "0.4.3"
tao = "0.11.2"
smallvec = "1.9.0"

[dependencies.utilities]
path = "../utilities"

[dependencies.renderer]
path = "../renderer"

[build-dependencies]
anyhow = "*"
env-file-reader = "0.3.0"
